src/test/ui/layout_err_nonexhaustive.rs
use std::mem::LayoutError;

fn main() {
    let _err = LayoutError; //~ ERROR expected value, found struct `LayoutError`
}
